--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".activities.OnboardingActivity"
-            android:label="@string/title_activity_onboarding"
+            android:label="@string/app_name"
             android:theme="@style/AppThemeIntro.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,8 +30,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.MainActivity">
-        </activity>
+        <activity android:name=".activities.MainActivity" />
     </application>
 
 </manifest>
