--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -32,4 +33,5 @@ dependencies {
 
     compile 'com.android.support:design:26.1.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.otaliastudios:cameraview:1.4.0'
 }
